@@ -303,6 +303,7 @@ function jacks_editor_app_ready(je, je_input, je_output) {
 function jacks_fetch_topology_callback(rspecs) {
     //  console.log("RSPECS = " + rspecs + " " + rspecs.length);
   var rspec = rspecs[0].rspec;
+  $('#current_rspec_text').val(rspec);
   if(jacksEditorApp.downloadingRspec) {
       jacksEditorApp.downloadingRspec = false;
       $.post("saverspectoserver.php", {rspec : rspec},
@@ -317,12 +318,20 @@ function jacks_fetch_topology_callback(rspecs) {
 	      });
   } else if (jacksEditorApp.submittingRspec) {
       jacksEditorApp.submittingRspec = false;
-      $('#current_rspec_text').val(rspec);
       validateSubmit();
   } else if (jacksEditorApp.passingContextToURL != null) {
       var editor_url = jacksEditorApp.passingContextToURL;
       jacksEditorApp.passingContextToURL = null;
       do_editor_expand_internal(editor_url, rspec);
+  } else if (jacksEditorApp.invoking_auto_ip) {
+      jacksEditorApp.invoking_auto_ip = false;
+      do_auto_ip_assignment_internal();
+  } else if (jacksEditorApp.invoking_selection_duplicate_nolinks) {
+      jacksEditorApp.invoking_selection_duplicate_nolinks = false;
+      do_selection_duplicate_internal(false);
+  } else if (jacksEditorApp.invoking_selection_duplicate_links) {
+      jacksEditorApp.invoking_selection_duplicate_links = false;
+      do_selection_duplicate_internal(true);
   } else {
       // Handle new rspec but don't update Jacks (we just got it from Jacks)
       validate_rspec_file(rspec, false, handle_validation_results_no_jacks);
@@ -520,6 +529,16 @@ function do_editor_expand_internal(editor_url, current_rspec)
 // rspec containing these copied nodes to Jacks
 function do_selection_duplicate(include_links)
 {
+    if (include_links) {
+	jacksEditorApp.invoking_selection_duplicate_links = true;
+    } else {
+	jacksEditorApp.invoking_selection_duplicate_nolinks = true;
+    }
+    jacksEditorApp.jacksInput.trigger('fetch-topology');
+}
+
+function do_selection_duplicate_internal(include_links)
+{
     var all_node_names = [];
     var num_topology_nodes = jacksEditorApp.currentTopology.nodes.length;
     for(var i = 0; i < num_topology_nodes; i++) {
@@ -676,6 +695,13 @@ function construct_new_node_name(orig_node_name, all_node_names) {
 // Go through all links. Label that 10.10.i.*;
 //   Go through all interfaces on that link. Label that 10.10.i.j;
 function do_auto_ip_assignment()
+{
+    jacksEditorApp.invoking_auto_ip = true;
+    jacksEditorApp.jacksInput.trigger('fetch-topology');
+}
+
+
+function do_auto_ip_assignment_internal()
 {
     var rspec = $('#current_rspec_text').val();
     var doc = jQuery.parseXML(rspec);
